--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
@@ -84,7 +84,7 @@
         <div class="row">
             <div class="col-3 mb-4" *ngFor="let item of productList; let i = index">
                 <mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined">
-                    @if(activeIndex === i){
+                    @if(activeIndex === i && isConfirmVisible){
                     <div class="gift-confirmation-button bg-dark text-white p-3">
                         <div>Are you sure want to proceed with this.</div>
                         <div class="confirm-buttons mt-2">
