--- a/client/webUI/src/app/pages/employee/reward-claimed/reward-claimed.component.html
+++ b/client/webUI/src/app/pages/employee/reward-claimed/reward-claimed.component.html
@@ -1,17 +1,20 @@
-
-<section class="container">
-    <div class="row justify-content-center">
-        <div class="col-5">
-            <mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined">           
-                <mat-card-content class="text-center">                    
-                    <mat-icon>check_circle</mat-icon>
-                    <div class="logo-font mt-5 mb-2">
-                        Congratulations!
-                    </div>
-                    <div>You have successfully claimed the reward...</div>
-                </mat-card-content>
-            </mat-card>
+<section class="container-fluid bg-light h-100">
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <mat-card class="bg-white shadow-sm p-3 confirmation-card" appearance="outlined">
+                    <mat-card-content class="text-center">
+                        <img mat-card-image src="assets/images/success-message.png" />
+                        <div class="bg-dark text-white mt-3 p-3 shadow-sm" style="border-radius: 12px;">
+                            <div class="banner-font fw-bold">
+                                Congratulations!
+                            </div>
+                            <div class="mt-4">Your Reward is confirmed</div>
+                            <div><a href="#" class="text-white">Back to home</a></div>
+                        </div>
+                    </mat-card-content>
+                </mat-card>
+            </div>
         </div>
     </div>
 </section>
-
