--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
@@ -8,7 +8,7 @@
             </div>
             <div>
                 <a mat-flat-button [routerLink]="['/employee-code']" class="bg-dark py-3 shadow-sm button-mh-45">
-                    <mat-icon>celebration</mat-icon> <span>Join Us</span>
+                    <mat-icon>celebration</mat-icon> <span>Log Out</span>
                 </a>
             </div>
         </header>
