--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
@@ -8,7 +8,7 @@
             </div>
             <div>
                 <a mat-flat-button [routerLink]="['/employee-code']" class="bg-dark py-3 shadow-sm button-mh-45" (click)="logOut()" >
-                    <mat-icon>logout</mat-icon> <span>Log Out</span></a>
+                    <mat-icon>power_settings_new</mat-icon> <span>Log Out</span></a>
             </div>
         </header>
     </section>
