--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.css
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.css
@@ -54,14 +54,13 @@ button.button-mh-60.mat-mdc-button-disabled {
     color: white;
 }
 
+/* confirmation-box */
 .gift-confirmation-button{
     position: absolute;        
     border-radius: 12px;
-    z-index: 99999;
-    left: 50%;
+    z-index: 99999;    
     width: 90%;
-    top: 50%;
-    transform: translate(-50%, -50%); 
+    top: 33%;    
 }
 
 .confirm-buttons{
