--- a/client/webUI/src/styles.css
+++ b/client/webUI/src/styles.css
@@ -48,13 +48,18 @@ body {
   font-weight: bold !important;
 }
 
- /* header-logo font */
- .logo-font {
+textarea {
+  font-size: 24px !important;
+  font-weight: bold !important;
+}
+
+/* header-logo font */
+.logo-font {
   font-size: 2rem;
 }
- .vh-100{
+.vh-100 {
   height: 100vh;
- }
+}
 
 /*snackbar-error*/
 .snackbar-error .mat-mdc-snackbar-surface {
