--- a/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.css
+++ b/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.css
@@ -46,3 +46,38 @@
 .mat-mdc-form-field-textarea-control {
   min-height: 110px;
 }
+
+
+
+
+
+/* == reward css style == */
+.badge {
+  padding: 7px 14px;
+  border-radius: 25px;
+}
+
+.product-reward-card .active-product-card {
+  opacity: 0.05;
+}
+
+.product-reward-card {
+  transition: all 0.3s ease-out;
+}
+
+.product-reward-card:hover {
+  transform: scale(1.03);
+}
+
+button.button-mh-60.mat-mdc-button-disabled {
+  color: white;
+}
+
+
+
+
+
+
+
+
+
