--- a/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
+++ b/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
@@ -14,29 +14,6 @@
           (ngSubmit)="onSubmit()"
           class="mt-5"
         >
-          <h4 class="fw-bold mb-1">Product Title</h4>
-          <mat-form-field appearance="outline" class="d-block input-lg input">
-            <input matInput formControlName="productTitle" />
-            <mat-icon matSuffix>redeem</mat-icon>
-            @if (this.addGiftItemForm.get("productTitle")?.hasError("required"))
-            {
-            <mat-error>This is Required</mat-error> }
-          </mat-form-field>
-          <h4 class="fw-bold mb-1">Product Description</h4>
-          <small>(* Maximum Character limit is 200 *)</small>
-          <mat-form-field appearance="outline" class="d-block input-lg input">
-            <textarea matInput formControlName="productDescription"></textarea>
-            <!-- 
-            @if
-            (this.addGiftItemForm.controls("productDescription")?.error("maxLength"))
-            {
-              <mat-error>Max-length is 200 character only</mat-error>
-            } -->
-            @if
-            (this.addGiftItemForm.get("productDescription")?.hasError("required"))
-            {
-            <mat-error>This is Required</mat-error> }
-          </mat-form-field>
           <h4 class="fw-bold mb-1">Coupon Code</h4>
           <mat-form-field appearance="outline" class="d-block input-lg input">
             <input matInput formControlName="couponCode" />
@@ -61,8 +38,9 @@
               (change)="selectFiles($event)"
             />
           </mat-form-field>
-          @if (selectedFiles) {
-
+          @if (this.addGiftItemForm.get("productImage")?.hasError("required") &&
+          submitted) {
+          <mat-error>This is Required</mat-error> } @if (selectedFiles) {
           <mat-card appearance="outlined">
             <mat-card-content>
               <div class="row imageName-row">
@@ -79,9 +57,33 @@
               </div>
             </mat-card-content>
           </mat-card>
-          } @if (this.addGiftItemForm.get("productImage")?.hasError("required")
-          && submitted) {
-          <mat-error>This is Required</mat-error> }
+          }
+
+          <h4 class="fw-bold mb-1">Product Title</h4>
+          <mat-form-field appearance="outline" class="d-block input-lg input">
+            <input matInput formControlName="productTitle" />
+            <mat-icon matSuffix>redeem</mat-icon>
+            @if (this.addGiftItemForm.get("productTitle")?.hasError("required"))
+            {
+            <mat-error>This is Required</mat-error> }
+          </mat-form-field>
+
+          <h4 class="fw-bold mb-1">Product Description</h4>
+          <small>(* Maximum Character limit is 200 *)</small>
+          <mat-form-field appearance="outline" class="d-block input-lg input">
+            <textarea matInput formControlName="productDescription"></textarea>
+            <!-- 
+            @if
+            (this.addGiftItemForm.controls("productDescription")?.error("maxLength"))
+            {
+              <mat-error>Max-length is 200 character only</mat-error>
+            } -->
+            @if
+            (this.addGiftItemForm.get("productDescription")?.hasError("required"))
+            {
+            <mat-error>This is Required</mat-error> }
+          </mat-form-field>
+
           <div class="mt-2">
             <button
               mat-flat-button
@@ -100,37 +102,57 @@
             Design New,<span class="text-primary"> Rewards!</span>
           </div>
           <p>Enter your administrator code + key and oversee the system!</p>
-
+          @if (this.addGiftItemForm.get("couponCode")?.value ||
+          this.addGiftItemForm.get("productTitle")?.value ||
+          this.addGiftItemForm.get("productDescription")?.value ||
+          this.addGiftItemForm.get("productImage")?.value){
           <mat-card
             class="bg-white shadow-sm product-reward-card p-3"
             appearance="outlined"
           >
+            @if (this.addGiftItemForm.get("couponCode")?.value ||
+            this.addGiftItemForm.get("productTitle")?.value ||
+            this.addGiftItemForm.get("productDescription")?.value ||
+            this.addGiftItemForm.get("productImage")?.value){
             <mat-card-content class="d-block">
-              <span class="badge shadow-sm bg-dark text-white fs-12"
-                >Coupon code</span
-              >
+              @if (this.addGiftItemForm.get("couponCode")?.value ){
+              <span class="badge shadow-sm bg-dark text-white fs-12">{{
+                this.addGiftItemForm.get("couponCode").value
+              }}</span>
+              } @if (this.addGiftItemForm.get("productImage")?.value ){
               <div class="d-flex justify-content-center my-5">
                 <img
                   mat-card-image
                   height="200"
                   width="200"
                   alt="Product Image"
+                  src="assets/images/products/{{ selectedFiles?.name }}"
                 />
               </div>
+              }
+
               <div>
-                <div>product title</div>
-                <div class="fs-12">product description</div>
+                @if (this.addGiftItemForm.get("productTitle")?.value ){
+                <div>{{ this.addGiftItemForm.get("productTitle").value }}</div>
+                } @if (this.addGiftItemForm.get("productDescription")?.value ){
+                <div class="fs-12">
+                  {{ this.addGiftItemForm.get("productDescription").value }}
+                </div>
+                }
               </div>
+              @if (this.addGiftItemForm.valid){
               <div>
                 <button
                   mat-flat-button
                   class="button-mh-60 w-100 bg-dark mt-2 claim-gift-btn"
                 >
-                  <mat-icon>celebration</mat-icon>claim goft
+                  <mat-icon>celebration</mat-icon>claim gift
                 </button>
               </div>
-            </mat-card-content>
+              } </mat-card-content
+            >}
           </mat-card>
+          }
         </div>
       </div>
       <!-- mage-section -->
