update in banner cards

--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.css
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.css
@@ -32,6 +32,36 @@
     top: -20%;
 }
 
+.banner-card-odd{
+    -webkit-animation: CardmoverOdd 3s infinite  alternate;
+    animation: CardmoverOdd 3s infinite  alternate;
+}
+
+@-webkit-keyframes CardmoverOdd {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-10px); }
+}
+ 
+@keyframes CardmoverOdd {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-10px); }
+}
+
+.banner-card-even{
+    -webkit-animation: CardmoverEven 3s infinite  alternate;
+    animation: CardmoverEven 3s infinite  alternate;
+}
+
+@-webkit-keyframes CardmoverEven {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(10px); }
+}
+ 
+@keyframes CardmoverEven {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(10px); }
+}
+
 /* == reward css style == */
 .badge {
     padding: 7px 14px;
