--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
@@ -29,38 +29,38 @@
                 ease!
             </div>
         </div>
-        <div class="col-7">
+        <div class="col-7 mt-4">
             <div class="row">
                 <div class="col-4 mb-4">
-                    <mat-card class="banner-card banner-card-bg-1 shadow-sm p-3" appearance="outlined">
+                    <mat-card class="banner-card banner-card-bg-1 shadow-sm p-3 banner-card-odd" appearance="outlined">
                         <img mat-card-image src="assets/images/banner-1.png" />
                     </mat-card>
                 </div>
                 <div class="col-4 mb-4">
-                    <mat-card class="banner-card banner-card-bg-2 position-relative shadow-sm p-3 py-5"
+                    <mat-card class="banner-card banner-card-bg-2 position-relative shadow-sm p-3 py-5 banner-card-even"
                         appearance="outlined">
                         <img mat-card-image src="assets/images/banner-5.png" />
                     </mat-card>
                 </div>
                 <div class="col-4 mb-4">
-                    <mat-card class="banner-card banner-card-bg-3 shadow-sm p-3" appearance="outlined">
+                    <mat-card class="banner-card banner-card-bg-3 shadow-sm p-3 banner-card-odd" appearance="outlined">
                         <img mat-card-image src="assets/images/banner-3.png" />
                     </mat-card>
                 </div>
                 <div class="col-4">
-                    <mat-card class="banner-card banner-card-bg-4 position-relative shadow-sm p-3 py-5"
+                    <mat-card class="banner-card banner-card-bg-4 position-relative shadow-sm p-3 py-5 banner-card-odd"
                         appearance="outlined">
                         <img mat-card-image src="assets/images/banner-4.png" />
                     </mat-card>
                 </div>
                 <div class="col-4">
-                    <mat-card class="banner-card banner-card-bg-5 position-relative shadow-sm p-3"
+                    <mat-card class="banner-card banner-card-bg-5 position-relative shadow-sm p-3 banner-card-even"
                         appearance="outlined">
                         <img mat-card-image src="assets/images/banner-2.png" />
                     </mat-card>
                 </div>
                 <div class="col-4">
-                    <mat-card class="banner-card banner-card-bg-6 position-relative shadow-sm p-3 py-5"
+                    <mat-card class="banner-card banner-card-bg-6 position-relative shadow-sm p-3 py-5 banner-card-odd"
                         appearance="outlined">
                         <img mat-card-image src="assets/images/banner-6.png" />
                     </mat-card>
