update user name

--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
@@ -17,7 +17,8 @@
 <!-- banner-section -->
 <section class="container">
     <div class="row py-5 align-items-center">
-        <div class="col-5">            
+        <div class="col-5"> 
+            <div class="text-primary">Welcome Jyoti</div>           
             <div class="banner-font fw-bold">
                 Unlock Your <span class="text-primary">Gift,</span> Embrace the <span
                     class="text-primary">Moment!</span>
