update in employee header component and employee footer component

--- a/client/webUI/src/app/pages/employee/reward-claimed/reward-claimed.component.html
+++ b/client/webUI/src/app/pages/employee/reward-claimed/reward-claimed.component.html
@@ -1,4 +1,9 @@
-<!--  -->
+<section class="container-fluid p-0">
+<!-- header -->
+<app-employee-header></app-employee-header>
+ <!-- /header -->
+</section>
+<!-- main content -->
 <section class="container-fluid bg-light h-100">
     <div class="container">
         <div class="row">
@@ -22,3 +27,7 @@
         </div>
     </div>
 </section>
+<!-- /main content -->
+<!-- footer -->
+<app-employee-footer></app-employee-footer>
+<!-- /footer -->
