--- a/client/webUI/src/app/pages/auth/employee-code/employee-code.component.html
+++ b/client/webUI/src/app/pages/auth/employee-code/employee-code.component.html
@@ -1,29 +1,11 @@
 <!-- container -->
 <section class="container-fluid p-0 vh-100 d-flex justify-content-between flex-sm-column">
   <!-- header section -->
-  <section class="bg-light shadow-sm">
-    <header
-      class="container d-flex justify-content-between align-items-center py-3"
-    >
-      <div class="logo-font">
-        <span class="text-dark fw-bold">Choice</span>
-        <span class="text-primary">Chase</span>
-      </div>
-      <a
-        mat-flat-button
-        href="https://www.google.com/"
-        class="bg-dark py-3 shadow-sm button-mh-45"
-        [routerLink]="['/admin-login-access']"
-        ><mat-icon>celebration</mat-icon><span>Manage Rewards</span></a
-      >
-    </header>
-  </section>
+  <app-employee-header></app-employee-header>
   <!-- /header section  -->
 
   <!-- main-section -->
-  <section
-    class="container  d-flex justify-content-center align-items-center my-5"
-  >
+  <section class="container  d-flex justify-content-center align-items-center my-5">
     <div class="row justify-content-center align-items-center">
       <!-- image-section -->
       <div class="col-4 pe-4">
@@ -52,10 +34,7 @@
             <mat-error>This is Required</mat-error>
           </mat-form-field>
           <div class="mt-2">
-            <button
-              mat-flat-button
-              class="button-mh-60 text-white bg-dark shadow-sm w-100 me-2"
-            >
+            <button mat-flat-button class="button-mh-60 text-white bg-dark shadow-sm w-100 me-2">
               Send Request
             </button>
           </div>
@@ -67,14 +46,7 @@
   <!-- /main-section -->
 
   <!-- footer section -->
-  <section class="footer py-4 bg-dark shadow-sm text-white mt-4">
-    <footer class="container">
-      <div class="d-flex justify-content-center align-items-center pt-2">
-        <mat-icon class="me-2">copyright</mat-icon> 2024 All rights are
-        reserved by ChoiceChase.
-      </div>
-    </footer>
-  </section>
+  <app-employee-footer></app-employee-footer>
   <!-- /footer section -->
 </section>
 <!-- /container -->
