--- a/client/webUI/src/app/shared/employee-header/employee-header.component.html
+++ b/client/webUI/src/app/shared/employee-header/employee-header.component.html
@@ -20,6 +20,23 @@
       }@else if(isRewardClaimedPage()){
         <a mat-flat-button [routerLink]="['/employee-code']" class="bg-dark py-3 shadow-sm button-mh-45">
           <mat-icon>celebration</mat-icon> <span>Back to Home</span></a>
-      }      
+      }@else if(isHomePage()){
+        <a mat-flat-button [routerLink]="['/employee-code']"
+          class="bg-dark py-3 shadow-sm button-mh-45"><mat-icon>celebration</mat-icon> <span>Join Us
+          </span></a>
+      }  @else if(isErrorPage()){
+        <a mat-flat-button [routerLink]="['/employee-code']"
+          class="bg-dark py-3 shadow-sm button-mh-45"><mat-icon>celebration</mat-icon> <span>Join Us
+          </span></a>
+        }  
+        @else if(isAdminLoginPage()){
+          <a
+          mat-flat-button
+          href="https://www.google.com/"
+          class="bg-dark py-3 shadow-sm button-mh-45"
+          [routerLink]="['/employee-code']"
+          ><mat-icon>celebration</mat-icon><span>Access your Rewards</span></a
+        >
+        }       
     </header>
   </section>
