--- a/client/webUI/src/app/pages/home/home.component.html
+++ b/client/webUI/src/app/pages/home/home.component.html
@@ -1,19 +1,7 @@
 <!--landing page -->
 <section class="container-fluid p-0">
   <!-- header section -->
-  <section class="bg-light shadow-sm">
-    <header class="container d-flex justify-content-between align-items-center py-3">
-      <div class="logo-font">
-        <span class="text-dark fw-bold">Choice</span>
-        <span class="text-primary">Chase</span>
-      </div>
-      <div>
-        <a mat-flat-button [routerLink]="['/employee-code']"
-          class="bg-dark py-3 shadow-sm button-mh-45"><mat-icon>celebration</mat-icon> <span>Join Us
-          </span></a>
-      </div>
-    </header>
-  </section>
+  <app-employee-header></app-employee-header>
   <!-- /header section  -->
 
   <!-- banner section -->
@@ -143,14 +131,7 @@
   </section>
   <!-- /how it works section -->
   <!-- footer section -->
-  <section class="py-4 bg-dark shadow-sm text-white">
-    <footer class="container">
-      <div class="d-flex justify-content-center align-items-center pt-2">
-        <mat-icon class="me-2">copyright</mat-icon> 2024 All rights are
-        reserved by ChoiceChase.
-      </div>
-    </footer>
-  </section>
+  <app-employee-footer></app-employee-footer>
   <!-- /footer section -->
   <!-- /container section -->
 </section>
