update css changes

--- a/client/webUI/src/app/shared/aside/aside.component.html
+++ b/client/webUI/src/app/shared/aside/aside.component.html
@@ -1,8 +1,8 @@
 <!-- Sidebar -->
-<nav class="sidebar">
-    <a [routerLink]="['/admin/dashboard']">Dashboard</a>
-    <a [routerLink]="['/admin/gift-inventory']">Gift Inventory</a>
-    <a [routerLink]="['/admin/employee-picks']">Employee Picks</a>
-    <a [routerLink]="['/admin/product-reports']">Product Reports</a>
-    <a [routerLink]="['/admin/settings']">Settings</a>
+<nav class="sidebar bg-dark shadow-sm h-100">
+    <a [routerLink]="['/admin/dashboard']" class="d-block text-white p-3 text-decoration-none">Dashboard</a>
+    <a [routerLink]="['/admin/gift-inventory']" class="d-block text-white p-3 text-decoration-none">Gift Inventory</a>
+    <a [routerLink]="['/admin/employee-picks']" class="d-block text-white p-3 text-decoration-none">Employee Picks</a>
+    <a [routerLink]="['/admin/product-reports']" class="d-block text-white p-3 text-decoration-none">Product Reports</a>
+    <a [routerLink]="['/admin/settings']" class="d-block text-white p-3 text-decoration-none">Settings</a>
 </nav>
