update button state

--- a/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
+++ b/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
@@ -144,7 +144,7 @@
 
               <div>
                 <button
-                  readonly
+                [disabled]="true"
                   mat-flat-button
                   class="button-mh-60 w-100 bg-dark mt-2 claim-gift-btn"
                 >
