--- a/client/webUI/src/app/pages/employee/reward-claimed/reward-claimed.component.html
+++ b/client/webUI/src/app/pages/employee/reward-claimed/reward-claimed.component.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="row">
             <div class="col-6">
-                <mat-card class="bg-white shadow-sm p-3 confirmation-card" appearance="outlined">
+                <mat-card class="bg-white shadow-sm p-3 confirmation-card position-absolute" appearance="outlined">
                     <mat-card-content class="text-center">
                         <img mat-card-image src="assets/images/success-message.png" />
                         <div class="bg-dark text-white mt-3 p-3 shadow-sm" style="border-radius: 12px;">
