--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.css
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.css
@@ -32,6 +32,7 @@
     top: -20%;
 }
 
+/* banner cards animation */
 .banner-card-odd{
     -webkit-animation: CardmoverOdd 3s infinite  alternate;
     animation: CardmoverOdd 3s infinite  alternate;
@@ -62,6 +63,8 @@
     100% { transform: translateY(10px); }
 }
 
+/* /banner cards animation  */
+
 /* == reward css style == */
 .badge {
     padding: 7px 14px;
@@ -85,14 +88,10 @@ button.button-mh-60.mat-mdc-button-disabled {
 }
 
 /* confirmation-box */
-.gift-confirmation-button{
-    position: absolute;        
+.gift-confirmation-button{          
     border-radius: 12px;
     z-index: 99999;    
     width: 90%;
     top: 33%;    
 }
 
-.confirm-buttons{
-    text-align: end;
-}
