--- a/client/webUI/src/app/pages/error/page-not-found/page-not-found.component.html
+++ b/client/webUI/src/app/pages/error/page-not-found/page-not-found.component.html
@@ -1,7 +1,7 @@
 <!-- container-section -->
-<section class="container-fluid p-0 vh-100 d-flex justify-content-between flex-sm-column">  
+<section class="container-fluid p-0 vh-100 d-flex justify-content-between my-auto">  
   <!-- main-section -->
-  <section class="container  d-flex justify-content-center align-items-center my-5">
+  <section class="container  d-flex justify-content-center align-items-center">
     <div class="row justify-content-center align-items-center">
       <div class="col-5">
         <div class="banner-font fw-bold">
