--- a/client/webUI/src/app/shared/header/header.component.html
+++ b/client/webUI/src/app/shared/header/header.component.html
@@ -1,10 +1,10 @@
  <!-- Header -->
- <header class="header">
-    <div class="logo">YourLogo</div>
-    <div class="header-links">
+ <header class="header bg-white p-3 d-flex justify-content-between align-items-center shadow-sm">
+    <div class="logo fw-bold text-dark">YourLogo</div>
+    <div class="header-links d-flex">
         <div class="d-flex align-items-center">
-            <a href="#">Profile</a>
-            <a href="#" class="px-3">Notifications</a>
+            <a href="#" class="text-dark text-decoration-none">Profile</a>
+            <a href="#" class="px-3 text-dark text-decoration-none">Notifications</a>
             <a mat-flat-button [routerLink]="['/admin-login-access']" class="bg-dark py-3 shadow-sm button-mh-45 text-white d-flex py-3 px-4" (click)="logOut()" >
                 <mat-icon>power_settings_new</mat-icon> <span>Log Out</span></a>  
         </div>              
