--- a/client/webUI/src/app/shared/header/header.component.html
+++ b/client/webUI/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
  <!-- Header -->
  <header class="header bg-white p-3 d-flex justify-content-between align-items-center shadow-sm">
-    <div class="logo fw-bold text-dark">YourLogo</div>
+    <div class="fw-bold text-dark">YourLogo</div>
     <div class="header-links d-flex">
         <div class="d-flex align-items-center">
             <a href="#" class="text-dark text-decoration-none">Profile</a>
